# Tesis

./: .gitignore  README.md
BACKEND/: Caddyfile  Dockerfile  Makefile  docker-compose.yml  package-lock.json  package.json  prometheus.yml  pyproject.toml  requirements.txt
BACKEND/app/: cli.py  main.py  middlewareMonitor.py  monitor.py
BACKEND/app/api/: deps.py  router.py
BACKEND/app/controllers/: __init__.py  config_controller.py  event_controller.py  history_controller.py  institution_controller.py  news_controller.py  notification_controller.py  role_controller.py  scenario_controller.py  student_controller.py  user_controller.py
BACKEND/app/core/: config.py  database.py  exceptions.py  logging.py  security.py
BACKEND/app/ml/: Model.pkl
BACKEND/app/models/: __init__.py  asociaciones.py  audit.py  configuration.py  event.py  institution.py  news.py  notification.py  scenario.py  security.py  student.py  user.py
BACKEND/app/repositories/: __init__.py  audit_repository.py  category_repository.py  config_repository.py  discipline_repository.py  event_repository.py  institution_repository.py  invitation_repository.py  news_repository.py  notification_repository.py  password_reset_repository.py  permission_repository.py  registration_repository.py  role_repository.py  scenario_repository.py  sport_repository.py  student_repository.py  user_repository.py
BACKEND/app/schemas/: auth.py  catalog.py  common.py  configuration.py  event.py  history.py  institution.py  invitation.py  news.py  results.py  (+9 more)
BACKEND/tests/: test_auth_login.py  test_scheduling_service.py
(+137 files in other folders)
