[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agxport-backend"
version = "0.1.0"
description = "Backend FastAPI para gestión de eventos deportivos"
authors = [{name = "AGXport"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "SQLAlchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.18",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "passlib[argon2]>=1.7.4",
    "email-validator>=2.1.0",
    "pyjwt[crypto]>=2.8.0",
    "structlog>=24.1.0",
    "typer>=0.12.3",
    "python-multipart>=0.0.9",
    "ortools>=9.11.4210",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["app"]
